--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,13 @@ dependencies = [
     "openai>=1.107.0",
     "pyannote-audio>=3.4.0",
     "pyaudio>=0.2.14",
+    "pyinstaller",
     "pyside6>=6.9.2",
     "qasync>=0.28.0",
     "reportlab>=4.4.3",
     "resampy>=0.4.3",
     "sounddevice>=0.5.2",
     "toml>=0.10.2",
+    "transformers>=4.57.3",
     "webrtcvad>=2.0.10",
 ]
